--- a/PersonalSite/wwwroot/index.html
+++ b/PersonalSite/wwwroot/index.html
@@ -27,6 +27,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Blazor-Analytics/blazor-analytics.js"></script>
 </body>
 
 </html>
