--- a/PersonalSite/wwwroot/index.html
+++ b/PersonalSite/wwwroot/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    
     <title>Marina Sundström</title>
+    
+    <meta name="description" content="Personal blog of Marina Sundström." />
+    <meta name="keywords" content="Blog, Personal, Software Development" />
+
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
